# darktide-mod-magos

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  runbook.md
.github/workflows/: curator-build.yml  curator-post-release-av.yml  magos-build.yml  mingw-build.yml  msvc-build.yml  release.yml
discovery/: Cargo.toml
discovery/src/: disasm.rs  engine.rs  lib.rs  oracle.rs  patterns.rs  pe.rs  scan.rs
discovery/tests/: detail.rs  oracle.rs  pe_synthetic.rs
docs/: production-spec.md  production-summary.md
docs/architecture/: ENGINSEER-DMF.md  ENGINSEER.md  MAGOS-MODIFICUS.md  MODIFICUS-CURATOR.md  MOD_LOADER-DMF.md  README.md  RUNTIME.md  app-auto-update.md  mod-acquisition.md  nexus-authentication.md  nexus-rate-limiting.md  nxm-scheme-handler.md  ui-architecture.md
docs/decisions/: 0001-component-a-language-and-structure.md  README.md
docs/design/: 0001-junction-staging.md  0002-usvfs-spike.md  0003-usvfs-spike-results.md
docs/planning/: README.md  spike-001-component-a-language.md
docs/poc/: DEPLOYMENT_OPTIONS_SURVEY.md  README.md  lua-vm-injection-anchors.md  lua-vm-injection-poc-results.md  lua-vm-injection-poc.md  lua-vm-injection-theory.md  poc-postmortem.md  production-spec.md  production-summary.md
docs/reference/: README.md  config.md  darktide-binary.md  general.md  integrations.md  mods.md  nexus-premium.md  nxm.md  profiles.md  rate-limiting-strategy.md  relay-client.md  release-strategy.md  steam.md  ui.md
enginseer/: Makefile  README.md
enginseer/enginseer/: enginseer.v1.lua  require_wrap.lua
enginseer/mod_loader/: class_patch.lua  file.lua  init.lua  init.v1.lua  lifecycle.lua  mod_manager.lua  require_wrap.lua
enginseer/tests/: test_config.c  test_trampoline.c
launcher/src/: launcher.c  launcher.h
magos-modificus/: Directory.Build.props  README.md  config.example.json  magos-modificus.sln
magos-modificus/config/: AppPaths.cs  DiscoveryConfig.cs  IntegrationsConfig.cs  LoggingConfig.cs  Magos.Modificus.Config.csproj  MagosConfig.cs  NexusConfig.cs  PreferencesConfig.cs
magos-modificus/enginseer-client/: EnginseerClientModule.cs  EnginseerLaunchService.cs  IEnginseerLaunchService.cs  IPlatformLaunchStrategy.cs  IProcessLauncher.cs  LaunchPlatform.cs  LinuxLaunchStrategy.cs  Magos.EnginseerClient.csproj  Magos.Modificus.EnginseerClient.csproj  ProcessLauncher.cs  ServiceCollectionExtensions.cs  WindowsLaunchStrategy.cs  WinePath.cs
magos-modificus/general/: AppStateStore.cs  ConfigLoader.cs  IAppStateStore.cs  LoggingBootstrap.cs  Magos.Modificus.General.csproj  ServiceCollectionExtensions.cs
magos-modificus/integrations/: GitHubApiException.cs  GitHubClient.cs  GitHubTypes.cs  IGitHubClient.cs  IModAcquisitionService.cs  INexusAuthMessageFactory.cs  INexusClient.cs  IUpdateCheckService.cs  IntegrationsModule.cs  LoopbackBrowser.cs  Magos.Modificus.Integrations.csproj  ModAcquisitionService.cs  NexusApiException.cs  NexusAuthMessageFactory.cs  NexusAuthService.cs  NexusClient.cs  NexusOAuthConstants.cs  NexusTypes.cs  ServiceCollectionExtensions.cs  UpdateCheckService.cs
magos-modificus/launcher/: LauncherModule.cs  Magos.Modificus.Launcher.csproj  Program.cs
magos-modificus/mods/: DirectoryCopy.cs  IModImportService.cs  IModRepository.cs  Magos.Modificus.Mods.csproj  ModContainer.cs  ModImportService.cs  (+6 more)
mod-manager/: README.md
runtime/: Cargo.toml  Makefile  RUNTIME.md
scripts/: install-appimage.sh  install-standalone.sh  install.sh  release.env  test-install-appimage.sh  test-uninstall-appimage.sh  uninstall-appimage.sh  uninstall-standalone.sh  uninstall.sh
src/: Directory.Build.targets  README.md  config.example.json  modificus-curator.sln
tests/: stub_shell.c  test_injection.c  test_runner.h  test_steam_env.c
(+669 files in other folders)
