# magos-discovery — Component A pure-library (Rust)
#
# Production discovery engine for the Darktide LuaJIT runtime. Resolves all 16
# target function addresses by Method A (string-anchor) + Method B (source-
# pattern) plus `.pdata` gap-handling (CFG thunks / leaf functions / import
# thunks). Pure computation over a borrowed byte slice; no I/O, no globals,
# no live-game access. Safe Rust everywhere except the capstone FFI wrapper and
# the C-ABI seam.
#
# Built as a `staticlib`/`cdylib` for linkage into the C shell, and as a normal
# `lib` for host-side `cargo test` (including the oracle test against the real
# Darktide.exe resolved via $DARKTIDE_GAME_DIR).
[package]
name = "magos-discovery"
description = "Darktide LuaJIT function-address discovery engine (Component A pure-library)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "magos_discovery"
# rlib for host tests + downstream Rust; staticlib/cdylib for the C shell link.
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
# capstone is the one external dependency: the source-pattern matchers compare
# against capstone's Intel-syntax `op_str` exactly as the POC's C engine did,
# so we use the same underlying libcapstone (bundled and built by capstone-sys'
# build script — portable C, cross-compiles to MinGW and builds under MSVC).
capstone = "0.13"

[dev-dependencies]
# SHA-256 of the resolved binary is computed by the oracle test to decide
# whether the pinned exact-match tier applies.
sha2 = "0.10"
